--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -17,7 +17,8 @@ textarea {
 }
 
 .time-block {
-  border-radius: 15px;
+  border-radius: 10px;
+  background-color: none;
 }
 
 .row {
@@ -25,14 +26,16 @@ textarea {
 }
 
 .hour {
+  font-weight: 600;
   background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  color: #06aed5;
+  margin-top: 2px;
+  border-top: 2px dashed #06aed5;
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
